--- a/main.css
+++ b/main.css
@@ -7,35 +7,207 @@
     
 }
 
-.right{
+
+.container .left .quantity {
+    width: 200px;
     float: right;
-    width: 300px;
+    margin-right: 200px;
+   vertical-align: top;
+    line-height: 2.0;
     border: 1px solid black;
+    text-align: center;
+  }
+
+
+  .container .left .quantity input {
+    
+    text-align: center;
+    width: 30px;
+    font-size: 16px;
+    color: rgb(138, 0, 92);
+    font-weight: 300;
+    
+  }
+
+  .container .left .quantity .circular-plus-button{
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    float: none;
+    background-color: rgb(0, 165, 0);
+    color: aliceblue;
+font-size: 14px;
+font-style: oblique;
+  }  
+
+  .container .left .quantity .circular-plus-button:hover{
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    float: none;
+    background-color: rgb(0, 119, 0);
+  }  
+
+  .container .left .quantity .circular-minus-button{
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    float: none;
+    background-color: rgb(255, 46, 46);
+    color: aliceblue;
+font-size: 14px;
+font-style: oblique;
+  }  
+
+  .container .left .quantity .circular-minus-button:hover{
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    float: none;
+    background-color: rgb(179, 35, 35);
+  } 
+
+  .container .left .buy-button{
+      height: 30px;
+      border-radius: 4px;
+      background-color: rgb(219, 216, 211);
+      font-size: 14px;
+
+  }
+
+  .container .left .buy-button:hover{
+    height: 30px;
+    border-radius: 4px;
+    background-color: rgb(175, 173, 169);
+}
+
+  .container .left .delete-button{
+      border-radius: 4px;
+    height: 30px;
+    background-color: rgb(255, 56, 56);
+color: aliceblue;
+font-size: 14px;
+font-style: oblique;
+}
+
+.container .left .delete-button:hover{
+    border-radius: 4px;
+  height: 30px;
+  background-color: rgb(199, 46, 46);
+  
+}
+
+
+.container .right{
+    float: right;
+    width: 230px;
     height: 300px;
     margin: auto;
     background-color:hotpink;
+    border-radius: 4px;
+  padding-left: 5px;
+   padding-top: 1rem;
+    padding-bottom: 1rem;
+    box-shadow: 3px 3px 5px grey;
 }
 
-
-
-.leftt{
-    float: left;
-    width: 200px;
-    border: 1px solid black;
-}
-
-.leftt p{
+.container .right .first {
+    border-bottom: 1px solid rgb(117, 116, 116);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    line-height: 2.0;
-    text-shadow: 1px 1px red;
 }
 
-.left p{
-    margin-left: 10px;
+.container .right .second{
+    border-bottom: 1px solid rgb(117, 116, 116);
+    height: 100px;
 }
 
-.left{
+.container .right .label{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   font-size: 18px;
+    border-radius: 4px;
+    padding: 1px;
+    line-height: 50px;
+    margin-right: 5px;
+    background-image: linear-gradient(rgb(231, 224, 224), rgb(177, 177, 175));
+
+}
+
+.container .right .label .count{
+    background-color: rgb(255, 136, 93);
+    border-radius: 50%;
+    color: aliceblue;
+    
+    
+}
+
+.container .right .third{
+    border-bottom: 1px solid rgb(117, 116, 116);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+
+.container .left{
     float: left;
-    width: 300px;
-   
+    width: 750px;
+   border-radius: 4px;
+    height: 285px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    background-color: rgb(213, 235, 255);
+    box-shadow: 3px 3px 5px grey;
 }
+
+.container .left p{
+    width: 100%;
+    border: 1px solid rgb(61, 233, 8);
+
+}
+.container .left p .search{
+    width: 650px;
+}
+
+.container .left .first{
+    float: left;
+    width: 100%;
+    border-bottom: 1px solid rgb(117, 116, 116);
+    flex-direction: row;
+    height: 50px;
+    padding-top: 30px;
+}
+
+.container .left .prodnotbought{
+   
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    width: 30%;
+    border: 1px solid rgb(255, 28, 28);
+}
+
+
+.container .left .second{
+    
+    width: 100%;
+   float: left;
+   border-bottom: 1px solid rgb(117, 116, 116);
+    height: 50px;
+    padding-top: 30px;
+}
+
+
+
+.container .left .third{
+   
+    width: 100%;
+   
+    float: left;
+    height: 50px;
+    padding-top: 30px;
+}
+
+
+
+.container .left button{
+    float: right;
+    border-radius: 8px;
+}
+
+
