--- a/main.css
+++ b/main.css
@@ -3,12 +3,14 @@
     max-width: 1100px;
     margin: auto;
     height: 300px;
+    display: flexbox;
+    flex-direction: column;
     
     
 }
 
 body{
-    background-color: rgb(206, 250, 248);
+    background-color: rgb(211, 211, 211);
     padding-top: 80px;
 }
 
@@ -82,6 +84,10 @@ border: none;
       background-color: rgb(240, 237, 232);
       font-size: 14px;
       border: none;
+      float: right;
+      -webkit-box-shadow: 0px 3px 6px 2px rgba(219,219,219,1);
+-moz-box-shadow: 0px 3px 6px 2px rgba(219,219,219,1);
+box-shadow: 0px 3px 6px 2px rgba(219,219,219,1);
 
 
   }
@@ -100,6 +106,10 @@ color: aliceblue;
 font-size: 14px;
 font-style: oblique;
 border: none;
+float: right;
+-webkit-box-shadow: 0px 3px 6px 2px rgba(219,219,219,1);
+-moz-box-shadow: 0px 3px 6px 2px rgba(219,219,219,1);
+box-shadow: 0px 3px 6px 2px rgba(219,219,219,1);
 
 }
 
@@ -113,12 +123,13 @@ border: none;
 
 .container .right{
     float: right;
-    width: 270px;
+    width: 280px;
     height: 265px;
     margin: auto;
-    background-color:rgb(255, 181, 218);
-    border-radius: 4px;
+    background-color: white;
+    border-radius: 5px;
   padding-left: 5px;
+  padding-right: 5px;
    padding-top: 1rem;
     padding-bottom: 1rem;
     box-shadow: 3px 3px 5px grey;
@@ -126,7 +137,7 @@ border: none;
 
 .container .right .first {
     border-bottom: 1px solid rgb(117, 116, 116);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
 .container .right .second{
@@ -135,8 +146,8 @@ border: none;
 }
 
 .container .right .label{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-   font-size: 15px;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+   font-size: 14px;
     border-radius: 4px;
     padding: 1px;
     line-height: 50px;
@@ -147,6 +158,8 @@ border: none;
 
 .container .right .label .count{
     background-color: rgb(255, 136, 93);
+    padding-left: 3px;
+    padding-right: 3px;
     border-radius: 50%;
     color: aliceblue;
     
@@ -155,36 +168,39 @@ border: none;
 
 .container .right .third{
     border-bottom: 1px solid rgb(117, 116, 116);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
 
 .container .left{
     float: left;
-    width: 750px;
-   border-radius: 4px;
+    max-width: 750px;
+   border-radius: 5px;
     height: 285px;
     padding: 5px;
-    background-color:rgb(255, 181, 218);
+    background-color: white;
     box-shadow: 3px 3px 5px grey;
+    margin: auto;
 }
 
 .container .left p{
     width: 100%;
-    
+    height: 40px;
+    border-bottom: 1px solid rgb(117, 116, 116); 
 
 }
 .container .left p .search{
-    width: 680px;
+    width: 675px;
+    height: 30px;
 }
 
 .container .left .addbtn{
     color: aliceblue;
     background-color: cornflowerblue;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    border-radius: 4px;
+font-family: "Trebuchet MS", Helvetica, sans-serif;     
+border-radius: 4px;
     width: 70px;
-    height: 22px;
+    height: 30px;
     border: none;
 }
 
@@ -197,43 +213,39 @@ border: none;
     width: 100%;
     border-bottom: 1px solid rgb(117, 116, 116);
     flex-direction: row;
-    height: 50px;
-    padding-top: 30px;
+    display: flex;
+    height: 45px;
+    padding-top: 15px;
 }
 
 .container .left .prodnotbought{
-   
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   padding-left: 7px;
+    font-family: "Trebuchet MS", Helvetica, sans-serif; 
     width: 30%;
     
 }
 
 
 .container .left .second{
-    
+
+    float: left;
     width: 100%;
-   float: left;
-   border-bottom: 1px solid rgb(117, 116, 116);
-    height: 50px;
+    border-bottom: 1px solid rgb(117, 116, 116);
+    flex-direction: row;
+    display: flex;
+    height: 45px;
     padding-top: 30px;
 }
 
 
 
 .container .left .third{
-   
-    width: 100%;
-   
+
     float: left;
-    height: 50px;
+    width: 100%;
+    flex-direction: row;
+    display: flex;
+    height: 45px;
     padding-top: 30px;
 }
-
-
-
-.container .left button{
-    float: right;
-    border-radius: 8px;
-}
-
 
